--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MimicPage</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <Header id="home" class="header-container">
+
         <div class="topnav">
-            <a href="#nav" class="active">Hem</a>
+            <a href="#home" class="active">Hem</a>
             <div id="myLinks">
+              <a href="#home">Hem</a>
               <a href="#about">Om</a>
               <a href="#contact">Kontakt</a>
             </div>
@@ -20,17 +22,17 @@
               <i class="fa fa-bars"></i>
             </a>
           </div>
-    </div>
-    <Header>
+
             <div class="header-text">
                 <h2>Welcome to nature</h2>
                 <p>A journey through time and sheep</p>
                 <p>To see how ...cotton ...is imgae, made I mean</p>
             </div>
     </Header>
+    </section>
 
     <main>
-        <section>
+        <section id="about">
             <h3>Träffa laget</h3>
         </section>
 
@@ -65,18 +67,22 @@
     </main>
 
     <footer>
-        <section>
+        <section id="contact">
             <div class="adress">
-                <p>Tegel Consulting AB</p>
-                <p>Agatvägen 18</p>
-                <p>168 60 Bromma</p>
-                <br>
-                <p>info@tegleconsulting.se</p>
-                <p>070-123 456 78</p>
-                <br>
-                <p><i style="font-size:24px" class="fa">&#xf16d;</i> Instagram</p>
-                <p><i style="font-size:24px" class="fa">&#xf099;</i> Twitter</p>
-                <p><i style="font-size:24px" class="fa">&#xf09a;</i> Facebook</p>
+                <ul>
+                    <li>Tegel Consulting AB</li>
+                    <li>Agatvägen 18</li>
+                    <li>168 60 Bromma</li>
+                </ul>
+                <ul>
+                    <li>info@tegleconsulting.se</li>
+                    <li>070-123 456 78</li>
+                </ul>
+                <ul>
+                    <li><i style="font-size:24px" class="fa">&#xf16d;</i> Instagram</li>
+                    <li><i style="font-size:24px" class="fa">&#xf099;</i> Twitter</li>
+                    <li><i style="font-size:24px" class="fa">&#xf09a;</i> Facebook</li>
+                </ul>
             </div>
         </section>
 
